<resources>

    <string name="app_name">FriendlyMusic</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="toast_notloaded">RumbleFish API is not initialized yet. Please try again a moment later.</string>
    <string name="toast_connection_fail">Connection to server has failed. Trying again</string>
    <string name="toast_media_url_invalid">The URL to the song appears to be invalid</string>
    <string name="coverflow_opening">Just a moment</string>
    <string name="coverflow_opening_sub">Loading..</string>
    
    <string name="home_headimage">Head image of home screen</string>
    <string name="home_moodimage">MoodMap logo image of home screen</string>
    <string name="home_occasionimage">Occasion logo image of home screen</string>
    <string name="home_editorspickimage">Editors pick logo image of home screen</string>
    <string name="home_separatorimage">Separator line image of home screen</string>
	
    <string name="moodmap_image">Image of moodmap screen</string>
    <string name="moodmap_listimage">Images of song list in mood map screen</string>
    
    <string name="navbar_image">Image of Navigation Bar</string>
    <string name="occasion_image">Image of occasion screen</string>
    
    <string name="fontname">Helvetica-Bold</string>
</resources>